[gd_scene load_steps=4 format=3 uid="uid://dwhtnb0xyaq1y"]

[ext_resource type="Script" path="res://Game/Vagoneta.gd" id="1_yntev"]
[ext_resource type="Texture2D" uid="uid://c852r1wtsj6wa" path="res://assets/Vagoneta/Vagoneta (todos los estados).png" id="2_42gdf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82ns3"]
size = Vector2(18, 10)

[node name="Vagoneta" type="CharacterBody2D"]
script = ExtResource("1_yntev")

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(10, -1)
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, 20)

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2(7, 0)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, -20)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, -3, -8, 4, 8, 4, 8, -3, 6, -3, 6, 2, -6, 2, -6, -3)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.5, -6)
texture = ExtResource("2_42gdf")
hframes = 4
vframes = 2

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_82ns3")
